--- a/notebooks/Week 1&2 - Python&Data Toolkit (coding, data collection and SQL & Jupyter, Numpy, Pandas, Matplotlib and Seaborn).ipynb
+++ b/notebooks/Week 1&2 - Python&Data Toolkit (coding, data collection and SQL & Jupyter, Numpy, Pandas, Matplotlib and Seaborn).ipynb
@@ -437,7 +437,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "381d081b",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -470,6 +472,25 @@
    ],
    "source": [
     "full_name('isa', 'silva')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0961073f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ipython debugger\n",
+    "import ipdb; ipdb.set_trace()\n",
+    "\n",
+    ">>> s (step into)\n",
+    ">>> n (next = step over)\n",
+    ">>> c (continue to next error)\n",
+    ">>> u (up stack trace), d(down)\n",
+    ">>> return (continue until current function return)\n",
+    ">>> l (provide more context)\n",
+    ">>> q (quit) or exit"
    ]
   },
   {
@@ -870,6 +891,14 @@
     "    JOIN owners o ON o.id = a.owner_id\n",
     "    \"\"\"\n",
     "df = pandas_gbq.read_gbq(sql, project_id=project_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b81a97dc",
+   "metadata": {},
+   "source": [
+    "# Data Toolkit"
    ]
   },
   {
